<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#51B2F4"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/Resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resultado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.726" />

    <Button
            android:id="@+id/Suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Suma"
            android:text="Suma"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

    <Button
            android:id="@+id/Multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Multiplicar"
            android:text="Multiplicar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" />

    <Button
            android:id="@+id/Potencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Potenciar"
            android:text="Pontenciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.713"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" />

    <Button
            android:id="@+id/Division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Dividir"
            android:text="Dividir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

    <Button
            android:id="@+id/Resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Resta"
            android:text="Resta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

    <EditText
            android:id="@+id/Caja2"
            android:layout_width="337dp"
            android:layout_height="82dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325" />

    <EditText
            android:id="@+id/Caja1"
            android:layout_width="334dp"
            android:layout_height="82dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

    <Button
            android:id="@+id/MetodoF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="MetodoF"
            android:text="Metodo fibonacci"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.916" />

    <Button
            android:id="@+id/GotoFactorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="GotoFactorial"
            android:text="Factorial"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

</androidx.constraintlayout.widget.ConstraintLayout>