...
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.253" />

    <EditText
            android:id="@+id/Numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Numero"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
...
